pimping out 500 page and fixing title on maintenance page

--- a/static/maintenance.html
+++ b/static/maintenance.html
@@ -4,7 +4,7 @@
       xmlns:fb="http://www.facebook.com/2008/fbml" lang="en" xml:lang="en">
     <head>
         
-        <title>Page not found | Repower at Home</title>
+        <title>Repower at Home</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <meta name="msvalidate.01" content="DC928E84A1569AF4933A7DB431C08DB4" />
         <meta name="y_key" content="9d9c6c76735e5a92"/>
